<resources>
    <string name="app_name">Seva60Plus HUM</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="go">Please tap to enter</string>
    <string name="take_a_tour">Take a tour</string>
    <string name="about_seva">About SevaGenie</string>
    <string name="privacy">Privacy Policy</string>
    <string name="terms">Terms of Service</string>
    <string name="take_a_tour_msg">Design and Developed by<br />SevaGenie</string>
    <string name="setUp">Initial Set Up</string>
    <string name="sathiCall">Sathi Call</string>
    <string name="medialSeva">Medical Seva</string>
    <string name="shareLocation">Share Location</string>
    <string name="emergency">Emergency</string>
    <string name="crash_toast">Oops i have crashed! the issue will be reported to the developer. Stay tuned for future updates.</string>
    <string name="name">Your Name</string>
    <string name="hint_saathi_name">Saathi Name</string>
    <string name="dob">Date of Birth</string>
    <string name="address">Address</string>
    <string name="address2">ADDRESS 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pin">Pincode</string>
    <string name="allergies">Allergies  #e.g, milk, sun, etc </string>
    <string name="diabetic">Diabetic</string>
    <string name="save">SAVE</string>
    <string name="contact">CONTACT NO.</string>
    <string name="relation">Relationship</string>
    <string name="mail">EMAIL</string>
    <string name="photo">Tap to upload profile picture</string>
    <string name="sathi1">+918961392526</string>
    <string name="sathi2">+919748126999</string>
    <string name="cust_name">Customer Name</string>
    <string name="cust_phone">PHONE NUMBER</string>
    <string name="medicine">MEDICINE NAME</string>
    <string name="qunt">QUANTITY</string>
    <string name="shop_number">+919748126999</string>
    <string name="order">ORDER</string>
    <string name="home">Seva60<b>Plus</b></string>
    <string name="no_pills">NO MEDICINES YET</string>
    <string name="about">Pill Reminder</string>
    <string name="about_title">About TakeThePill</string>
    <string name="title">SevaGenie Pill Reminder</string>
    <string name="help">Press menu button to add pill reminders or to change preferences.\n\nIn the edit view, you can configure new alarms or delete old ones.\n\nPress a few seconds over a pill to edit or delete it.\n\nTo cancel an alarm, just press the notification icon at the notification bar.\n\nIt will give you the option to warn somebody by email or by phone, or even warn yourself by email.</string>
    <string name="help_title">Help</string>
    <string name="pill_view_title">Pill</string>
    <string name="preferences_title">Preferences</string>
    <string name="user">User</string>
    <string name="pill">Pill</string>
    <string name="hour">Hour</string>
    <string name="hours">Hours</string>
    <string name="days">Days</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="warn_someone">Warn someone</string>
    <string name="warn">Warn</string>
    <string name="pill_description">Pill Image</string>
    <string name="email_description">Email Button</string>
    <string name="call_description">Call Button</string>
    <string name="menu_insert">Add Pill</string>
    <string name="menu_prefs">Change Preferences</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About TakeThePill&#8230;</string>
    <string name="menu_delete">Delete Pill</string>
    <string name="menu_edit">Edit Pill</string>
    <string name="edit_pill">Edit Pill</string>
    <string name="changed_prefs">Preferences were changed</string>
    <string name="confirm">CONFIRM</string>
    <string name="add_time">ADD TIME</string>
    <string name="delete_time">DELETE TIME</string>
    <string name="add_days">ADD DAYS</string>
    <string name="remove_time">Remove</string>
    <string name="send_email">Send Email</string>
    <string name="call">Call someone</string>
    <string name="send_me_email">Send me an email</string>
    <string name="contacts">Search in contacts</string>
    <string name="checkbox_alarm">Alarms Enabled</string>
    <string name="hint_email">Please, set an email</string>
    <string name="hint_phone">Please, set a phone</string>
    <string name="no_time">No time yet</string>
    <string name="no_days">No days yet</string>
    <string name="no_hours">No hours yet</string>
    <string name="alert_dialog_multi_choice">Select a day</string>
    <string name="alert_dialog_remove_time">Hours to delete</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="error_hour">Please select at least one hour</string>
    <string name="error_day">Please select at least one day</string>
    <string name="error_user">Please type the user name</string>
    <string name="error_pill">Please type a pill name</string>
    <string name="error_email">Please set a valid email adress</string>
    <string name="error_phone">Please set a valid phone number</string>
    <string name="error_no_mail_clients">There are no email clients installed</string>
    <string name="error_no_mail_preferences">Please, set your email address in app preferences</string>
    <string name="subject">TakeThePill warning</string>
    <string name="body1">This is a warning for </string>
    <string name="body2"> that has to take </string>
    <string name="body3"> at </string>
    <string name="delete_question">Delete?</string>
    <string name="sure_question">Are you sure?</string>
    <string name="description1">Please place your finger on the camera of the phone, then press the "START" button</string>
    <string name="description2">"<b>Disclaimer </b> - This feature is not replacement of any medical device that measures pluse rate. The readings shown are indicative"</string>
    <string name="description3">Please tap the <b>START</b> button and place your index finger over the camera. Please hold the position for one minute, without moving.</string>
    <string name="ok_button">Ok</string>
    <string name="cancel_button">Cancel</string>
    <string name="calibrate_help_title">How to calibrate</string>
    <string name="calibrate_help_msg">To calibrate the sensitivity of the shake-up phone until you hear a beep. For information: too small amplitude will be ignore, because the phone can create it by the vibration on the call.</string>
    <string name="calibrate_dialog_title">Calibration</string>
    <string name="calibrate_dialog_message">Shake you phone...</string>
    <string name="calibrate_off_title">Warning</string>
    <string name="calibrate_off_message">For calibration you must switch on the program. Just click to button for state ON</string>
    <string name="seekbar_low">low</string>
    <string name="seekbar_strength">strength of shaking</string>
    <string name="seekbar_high">high</string>
    <string name="checkbox_vibrate_label">Vibrate when call arrives?</string>
    <string name="menu_howto_label">How To</string>
    <string name="howto_text"><![CDATA[Shake&Mute - is an application that allows you to disable the phone ring during an incoming call, simply shake or slap. You can shake the bag, which contains the phone or slam on the pocket. Sensor sensitivity adjustable by calibration.]]></string>
    <string name="menu_about_label">About</string>
    <string name="about_text"><![CDATA[Development: Alexey Vasiliev\nDesign: Timur Prokopiev\nFor bugs and proposition:\npopcornua.by.leo@gmail.com]]></string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="title_activity_new_reminder">NewReminder</string>
    <string name="title_activity_edit_reminder">EditReminder</string>
    <string name="str_repeat">Select a Repeat type</string>
    <string name="str_mail">Select an Existing Mail Id </string>
    <string-array name="str_arr_repeat_type">
        <item>No Repeat</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string-array name="str_arr_mail">
        <item>Select an Existing Mail Id</item>
    </string-array>
    <string name="searchByCity">Search by city</string>
    <string name="searchByCoordinates">Search by coordinates</string>
    <string name="changeCity">choose a city</string>
    <string name="reset">update</string>
    <string name="forecast">forecast</string>
    <string name="writeCrd">coordinates (br., and debt.)</string>
    <string name="London">Minsk</string>
    <string name="lat">46.99</string>
    <string name="lon">32</string>
    <string name="temperatureDN">the temperature during the day / night</string>
    <string name="description">description</string>
    <string name="enterYourCityHere">Enter your city</string>
    <string name="temperature">temperature:</string>
    <string name="temperatureCUnit">50&#x2103;C</string>
    <string name="humidity">humidity:</string>
    <string name="percent"> %</string>
    <string name="pressure">pressure:</string>
    <string name="pressureUnit">&#160;kPa</string>
    <string name="wind">wind:</string>
    <string name="speedUnit">m / s</string>
    <string name="clouds">cloudiness:</string>
    <string name="N">northern</string>
    <string name="NE">northeast</string>
    <string name="E">east</string>
    <string name="SE">southeast</string>
    <string name="S">southern</string>
    <string name="SW">southwest</string>
    <string name="W">western</string>
    <string name="NW">northwest</string>
    <string name="d200"> light rain with Gorozia</string>
    <string name="d201"> rain with Gorozia</string>
    <string name="d202"> heavy rain with Gorozia</string>
    <string name="d210"> small Gorozia</string>
    <string name="d211"> Gorozia</string>
    <string name="d212"> strong Gorozia</string>
    <string name="d221"> Partly cloudy</string>
    <string name="d230"> slight drizzle and thunderstorms</string>
    <string name="d231"> drizzle and thunderstorms</string>
    <string name="d232"> drizzle with a strong storm</string>
    <string name="d300"> slight drizzle</string>
    <string name="d301"> drizzle</string>
    <string name="d302"> strong drizzle</string>
    <string name="d310"> Drizzle with a little rain</string>
    <string name="d311"> drizzle with rain</string>
    <string name="d312"> Strong rain drizzle</string>
    <string name="d313"> rain with drizzle</string>
	<string name="add_saathi_header">ADD SAATHI</string>
</resources>