<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#fff" >
    
    <LinearLayout 
        android:id="@+id/headerLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
     <include layout="@layout/header"/>
</LinearLayout>

<ScrollView 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/headerLay"
     >
    
    

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:textColor="#000"
            android:textSize="30sp"
            android:text="@string/user"
            android:visibility="gone" />

        <TextView
            android:id="@+id/text_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dip"
            android:text="Something"
            android:textColor="#0375be"
            android:textSize="30sp"
            android:visibility="gone"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:textColor="#000"
            android:textSize="30sp"
            android:text="@string/pill" />

        <TextView
            android:id="@+id/text_pill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dip"
             android:text="Something"
            android:textColor="#0375be"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:textColor="#000"
            android:textSize="30sp"
            android:text="@string/days" />

        <TextView
            android:id="@+id/view_textDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dip"
            android:text="@string/no_days"
             android:textColor="#0375be"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:text="@string/hours"
             android:textColor="#000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/view_textHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dip"
            android:text="@string/no_hours"
             android:textColor="#0375be"
            android:textSize="30sp" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/pill_description"
                android:src="@drawable/ic_pill_big" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>

<LinearLayout
        android:id="@+id/layeditDelButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        android:layout_marginTop="5dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

 <Button
        android:id="@+id/editButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
		android:layout_weight="1"
		android:textSize="25sp"
		android:textColor="#fff"
        android:background="#FFF"
        android:text="Edit"
        
         />
 <Button
        android:id="@+id/deleteButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
		android:layout_weight="1"
		android:textSize="25sp"
		android:textColor="#fff"
        android:background="#FFF"
        android:text="Delete"
        
         />

       
    </LinearLayout>
</RelativeLayout>