<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="7dp"
        android:background="@drawable/bg_media_centre_destination"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp" >

        <RelativeLayout
            android:id="@+id/addsathiLay"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@drawable/button_border_green_round" >

            <TextView
                android:id="@+id/addsathi1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:text="@string/add_saathi_header"
                android:textColor="#FFF"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/addsathi1arrow"
                android:layout_width="16dp"
                android:layout_height="28dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:background="@drawable/add_sathi_arrow" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sathi1_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/lay10"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/a_apptheme_textfield_activated_holo_light"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/saathiuser"
                    android:layout_width="15dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="3dp"
                    android:background="@drawable/contact_setup"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tvSaathiCountryCode"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/transparent"
                    android:editable="false"
                    android:hint="+91"
                    android:inputType="phone"
                    android:textColor="#313131"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/contactNumCode_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/down_arrow_gray" />

                <EditText
                    android:id="@+id/etSaathiPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/contact"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:textColor="#313131"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay11"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/lay10"
                android:layout_marginTop="5dp"
                android:background="@drawable/a_apptheme_textfield_activated_holo_light"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/saathiname"
                    android:layout_width="15dp"
                    android:layout_height="17dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="3dp"
                    android:background="@drawable/name"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/etSaathiName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/hint_saathi_name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:maxLength="31"
                    android:textColor="#313131"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay12"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lay11"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:visibility="gone" >

                <EditText
                    android:id="@+id/relationEdit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/relation"
                    android:textColor="#313131"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay13"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/lay12"
                android:layout_marginTop="5dp"
                android:background="@drawable/a_apptheme_textfield_activated_holo_light"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/saathiemail"
                    android:layout_width="18dp"
                    android:layout_height="17dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="3dp"
                    android:background="@drawable/blue_sms"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/etSaathiEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/mail"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:textColor="#313131"
                    android:textSize="20sp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/laySavebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#f5f5f5"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/laySavebutton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible" >

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="#404041"
                    android:onClick="onCancelButtonClick"
                    android:text="CANCEL"
                    android:textColor="#FFF"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="#0392D8"
                    android:onClick="onSaveButtonClick"
                    android:text="@string/save"
                    android:textColor="#FFF"
                    android:textSize="20sp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>